# chemical_kinetics

./: README.md  arrhenius.py  pyproject.toml  python_init.py  sample_csv.csv  sample_csv.ods
