[tool.poetry]
name = "chemical_kinetics"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.9"
numpy = "*"
pandas = "*"
sklearn = "*"
plotly = "*"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
